--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div class="Smart Glass">
-  <img class="Glass"src="glass.jpg" alt="glass-img">
+  <img class="Glass"src="Glass.jpg" alt="glass-img">
   <h5 class ="ProductHead4">Concept's Smart Glass Technology</h5>
   <p class="ProductDesc4">Providing glass that can be shaped to block/emit light all that can be done through pixels</p>
 </div>
