--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Concept</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Playfair+Display:wght@500&family=Quicksand:wght@500&display=swap" rel="stylesheet">
-  <link rel="icon" href="concept.png">
+  <link rel="icon" href="images/concept.png">
 
 </head>
 
@@ -17,7 +17,7 @@
     <div class="navbar">
       <a href="#TopPage" >Home</a>
       <a href="#BotPage">Contact</a>
-    </div> <img class="PathImg" src="new2.jpg" alt="main-path">
+    </div> <img class="PathImg" src="images/new2.jpg" alt="main-path">
     <h1 class="Name">Concept Advanced Technology Solutions</h1>
     <p class="IntroDesc">Engraving Innovative Paths</p>
   </div>
@@ -26,26 +26,26 @@
 
   <div class="MidPage">
     <h3 class="MidHead">Looking at the world differently through providing</h3>
-    <img class="UltraDesign" src="ultradesign.png" alt="ultradesign" >
+    <img class="UltraDesign" src="images/ultradesign.png" alt="ultradesign" >
   <h5 class ="ProductHead">Ultra Design Center</h5>
   <p class="ProductDesc">Implementing smart design technics for homes and offices </p>
 
 <div class="Factory">
 
 
-  <img  class="Chair" src = "wood.jpg" alt="chair-factory">
+  <img  class="Chair" src = "images/wood.jpg" alt="chair-factory">
   <h5 class ="ProductHead2">Concept's Furniture Factory</h5>
   <p class="ProductDesc2">Building and assembling clean looking and does the job furniture</p>
   </div>
 
 <div class="Smart Parking">
-  <img class="Parking"src="parking2.jpg" alt="parking-img">
+  <img class="Parking"src="images/parking2.jpg" alt="parking-img">
   <h5 class ="ProductHead3">Concept's Smart Parking Technology</h5>
   <p class="ProductDesc3">Building and designing from the ground up effiecent parking systems to carry large number of cars in small spaces</p>
 </div>
 
 <div class="Smart Glass">
-  <img class="Glass"src="Glass.jpg" alt="glass-img">
+  <img class="Glass"src="images/Glass.jpg" alt="glass-img">
   <h5 class ="ProductHead4">Concept's Smart Glass Technology</h5>
   <p class="ProductDesc4">Providing glass that can be shaped to block/emit light all that can be done through pixels</p>
 </div>
